Added survivalType to /survival/ with allowed values: overall, pfs, both
